# Plazza

./: .gitignore  CMakeLists.txt  Exception.cpp  Exception.hpp  Makefile  moul.sh  test.txt
Qt/: Makefile  Qt  Qt.cpp  Qt.h  Qt.pro  launch.sh  main_test.cpp
Socket/: Client.cpp  Client.hpp  Exception.hpp  Server.cpp  Server.hpp  client  client.cpp  client.sh  serv  serv.cpp  server.sh
bootstrap/: Exception.cpp  Mutex.cpp  Mutex.hpp  ScopedLock.cpp  ScopedLock.hpp  Thread.hpp  a.out  ex1.cpp  launch.sh
bootstrap/includes/: CondVar.hpp  IConVar.hpp  IMutex.hpp  ISafeQueue.hpp  SafeQueue.hpp  ScopedLock.hpp  ThreadPool.cpp  ThreadPool.hpp  testQ.cpp
cryptedFiles/: caesar  xor
include/: IConnector.hpp  IObservable.hpp  IObserver.hpp  IOrder.hpp  ISafeQueue.hpp
src/: IOrder.h  Main.cpp  Main.h  Main.hpp  OrderReader.cpp  OrderReader.h  OrderReader.hpp  Process.cpp  Process.h
src/orders/: AOrder.cpp  AOrder.hpp  EmailAddress.cpp  EmailAddress.h  EmailAddress.hpp  IOrder.h  IOrder.hpp  IpAddress.cpp  IpAddress.h  IpAddress.hpp  OrderFactory.cpp  OrderFactory.hpp  PhoneNumber.cpp  PhoneNumber.h  PhoneNumber.hpp
src/process/: OrderDispatcher.cpp  OrderDispatcher.hpp  Process.cpp  Process.h  Process.hpp  ThreadPool.cpp  ThreadPool.h  ThreadPool.hpp
src/utils/: Client.cpp  Client.hpp  Decrypt.cpp  Decrypt.hpp  Factory.hpp  Fifo.cpp  Fifo.hpp  Fork.cpp  Fork.hpp  IConnector.hpp  ISafeQueue.hpp  Parser.cpp  Parser.hpp  Regex.cpp  Regex.hpp  SafeQueue.hpp  Server.hpp  Socket.cpp  Socket.hpp  ThreadPool.cpp  ThreadPool.h  ThreadPool.hpp  test.cpp
src/utils/test_decrypt/: caesar  encrypted  main.cpp  test.sh  xor
src/utils/test_fifo/: test.cpp  test.sh
src/utils/test_parser/: main.cpp  test.sh
src/utils/test_regex/: main.cpp  main.cpp~  test.sh  test.sh~
src/utils/test_threadpool/: Exception.cpp  Parser.hpp  example.cpp
test/: order.txt  order.txt~
threadPool/: ThreadPool.h  example.cpp  main.cpp  test.sh
